unpackaged/main/default/objects/Inspection__c/Inspection__c.object-meta.xml
<CustomObject>
    <label>Inspection</label>
    <nameField>
        <displayFormat>Ins-{00000000}</displayFormat>
        <label>Id Inspection</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inspections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>