unpackaged/main/default/objects/Inspection__c/fields/Completed__c.field-meta.xml
<CustomField>
    <fullName>Completed__c</fullName>
    <formula>NOT( ISBLANK(Completed_Date__c) ) &amp;&amp;  NOT( ISNULL(Completed_Date__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completed</label>
    <type>Checkbox</type>
</CustomField>