unpackaged/main/default/objects/Inspection__c/fields/Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Outstanding__c</fullName>
    <formula>(ISBLANK(Completed_Date__c)|| ISNULL(Completed_Date__c)) &amp;&amp;  Scheduled_Date__c &lt; TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outstanding</label>
    <type>Checkbox</type>
</CustomField>