unpackaged/main/default/objects/Inspection__c/fields/Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Scheduled__c</fullName>
    <formula>(ISBLANK(Completed_Date__c)|| ISNULL(Completed_Date__c)) &amp;&amp;  Scheduled_Date__c &gt;= TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scheduled</label>
    <type>Checkbox</type>
</CustomField>