unpackaged/main/default/objects/Inspection__c/fields/Surveys_Count__c.field-meta.xml
<CustomField>
    <fullName>Surveys_Count__c</fullName>
    <label>Surveys Count</label>
    <summaryForeignKey>Survey__c.Inspection__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>