unpackaged/main/default/objects/Inspection__c/validationRules/CheckOnlyOneSurvey.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckOnlyOneSurvey</fullName>
    <active>true</active>
    <errorConditionFormula>Surveys_Count__c &gt; 1</errorConditionFormula>
    <errorMessage>There can only be one survey per inspection</errorMessage>
</ValidationRule>