unpackaged/main/default/objects/Inspection__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Store__c</columns>
    <columns>Scheduled__c</columns>
    <columns>Scheduled_Date__c</columns>
    <columns>Completed__c</columns>
    <columns>Completed_Date__c</columns>
    <columns>User__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>es</language>
</ListView>