unpackaged/main/default/objects/Inspection__c/listViews/Incompleted_Inspections.listView-meta.xml
<ListView>
    <fullName>Incompleted_Inspections</fullName>
    <columns>NAME</columns>
    <columns>Store__c</columns>
    <columns>User__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Completed__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Incompleted</label>
</ListView>